k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sltr-welcome-service
  namespace: sltr-fanny
spec:
  selector:
    app: welcome-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
