k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sltr-welcome-ingress
  namespace: sltr-fanny
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: 86af-34-132-100-114.ngrok-free.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sltr-welcome-service
            port:
              number: 80
  tls:
  - hosts:
    - 86af-34-132-100-114.ngrok-free.app
    secretName: welcome-tls
